refactor: remove /artigos/maior-margem endpoint
